add an independant search table

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ weather/Data Models/.DS_Store
 *.xcuserstate
 *.xcuserstate
 weather.xcodeproj/project.xcworkspace/xcuserdata/einsteinnguyen.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcbkptlist
