Add city state and date sections

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 weather/Data Models/.DS_Store
-*.xcuserstate
-*.xcuserstate
-*.xcuserstate
-weather.xcodeproj/project.xcworkspace/xcuserdata/einsteinnguyen.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcbkptlist
+*.xcuserdata
